singup page added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -77,12 +77,13 @@
 
         <div class="create-account">
           <p class="new-here">
-            New here? <a href="#">Create new Presetia Account</a>
+            New here? <a href="/signup">Create new Presetia Account</a>
           </p>
           <hr class="line" />
           <p class="term-condition">
             Presetia collects and uses personal data in accordance with our
-            Privacy Policy. By creating an account, you agree to our
+            <a href="">Privacy Policy</a>. By creating an account, you agree to
+            our
             <a href="">Terms and Conditions.</a>
           </p>
         </div>
