api calls & service added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -48,7 +48,7 @@
           (blur)="updateLabel()"
           (click)="updatevalue()"
         />
-        <input type="password" placeholder="Password" />
+        <input type="password" placeholder="Password" [(ngModel)]="password" />
         <div class="action-button">
           <button class="login-button" (click)="loginMe()" [disabled]="loading">
             <span *ngIf="!loading">Login</span>
