--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -37,10 +37,14 @@
         <h1>Sign up :)</h1>
 
         <h2 class="sub-heading">Enter your details</h2>
-        <input type="text" placeholder="Username" />
-        <input type="email" placeholder="Email" />
+        <input type="text" placeholder="Username" [(ngModel)]="username" />
+        <input type="email" placeholder="Email" [(ngModel)]="email" />
         <div class="password-input">
-          <input type="password" placeholder="Password" />
+          <input
+            type="password"
+            placeholder="Password"
+            [(ngModel)]="password"
+          />
           <p class="password-tip">
             Use 8 or more characters with a mix of letters, numbers and symbols.
           </p>
