--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -345,7 +345,7 @@
     }
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 808px) {
     .top-bar {
       flex-direction: column;
       .black-bar,
@@ -381,6 +381,9 @@
           h2.sub-heading {
             font-size: 15px;
           }
+          input {
+            width: 100%;
+          }
           .action-button {
             flex-direction: column;
             .login-button {
@@ -397,6 +400,15 @@
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          .footer-section.one,
+          .footer-section.two,
+          .footer-section.three,
+          .footer-section.four,
+          .footer-section.five {
+            align-items: center;
+            width: 100%;
+            justify-content: center;
+          }
           .footer-section.five {
             .subscribe-button {
               margin: 10% 0%;
@@ -418,6 +430,14 @@
           flex-direction: column;
           justify-content: center;
           align-items: center;
+
+          .footer-section.two {
+            .payment-icons {
+              img {
+                width: 100%;
+              }
+            }
+          }
         }
       }
     }
