--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -408,6 +408,9 @@
               width: 50%;
             }
           }
+          input {
+            width: 100%;
+          }
           .my-checkbox {
             display: none;
           }
@@ -447,6 +450,13 @@
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          .footer-section.two {
+            .payment-icons {
+              img {
+                width: 100%;
+              }
+            }
+          }
         }
       }
     }
